command buffer stable version with subgraphs & hsaco cache update
current progress with command buffer impl

Current state: more flexible way to decide when retracing is needed

graph capture update

compile fixes

retracing update

fixing hsaco cache impl

first fixed version

update working version

update graph mode

added env var for cached allocs

added support for convolutions and some debug

removed parent_exec flag

small update

buffer ping-ponging implemented

added functionality to unpack subgraphs to main graph

cmd buf profiling update

stable version with ping-pong buffering

first impl whole graphs caching

merged new command buffer changes from upstream to 0.5.0 branch

more or less stable version

some updates parallel execution

small fixes

small update

make sure cuda also compiles for testing

library fix

some adaptions needed for rocm7.1 compile

update on parallel graph exec

added some debugging

ongoing changes

update & code cleanup

optimizing while loops

cleanup

update execution graph dump

disable dumps by default

update

removed qccl stuff

update

update

update

subgraph cuda side adaptions

disable command buffers by default

command buffers are disabled by default

cleanup some comments

updating the tests

fixing tests

fixing the remaining failing tests

--- a/xla/service/BUILD
+++ b/xla/service/BUILD
@@ -1713,6 +1713,8 @@ cc_library(
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:span",
         "@tsl//tsl/platform:logging",
+        "@tsl//tsl/platform:env",
+        "//xla/tsl/util:env_var",
         "@tsl//tsl/platform:numbers",
     ],
 )
