--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -52,12 +52,14 @@ cc_library(
     deps = [
         ":annotation",
         ":custom_call_thunk",
+        ":convolution_thunk",
         ":dynamic_slice_thunk",
         ":gpublas_lt_matmul_thunk",
         ":nccl_all_gather_thunk",
         ":nccl_all_reduce_thunk",
         ":nccl_all_to_all_thunk",
         ":nccl_collective_broadcast_thunk",
+        ":nccl_collective_permute_thunk",
         ":nccl_collective_thunk",
         ":thunk",
         "//xla:debug_options_flags",
@@ -73,6 +75,9 @@ cc_library(
         "//xla/ffi/api:c_api",
         "//xla/hlo/ir:hlo",
         "//xla/runtime:buffer_use",
+        "//xla/runtime:execution_graph",
+        "//xla/runtime:object_pool",
+        "//xla/runtime:resource_use",
         "//xla/service:buffer_assignment",
         "//xla/service:collective_ops_utils",
         "//xla/service:computation_placer",
@@ -125,18 +130,11 @@ cc_library(
         ":conditional_thunk",
         ":copy_thunk",
         ":cudnn_thunk",
-        ":custom_call_thunk",
         ":gemm_thunk",
-        ":gpublas_lt_matmul_thunk",
         ":kernel_thunk",
         ":memset_thunk",
-        ":nccl_all_gather_thunk",
-        ":nccl_all_reduce_thunk",
-        ":nccl_all_to_all_thunk",
-        ":nccl_collective_thunk",
         ":replica_id_thunk",
         ":sequential_thunk",
-        ":thunk",
         ":wait_for_streams_thunk",
         ":while_thunk",
         "//xla:util",
