Rocm jaxlib v0.5.0 fp8 (#164)
* enable ocp fp8 for latest amd archs in gemm rewriter

* [ROCm][MLIR] Support native fp8 conversion instructions where possible

* [MLIR] Fp8 workaround

* Unblock CI

---------

Co-authored-by: scxfjiang <xuefei.jiang@amd.com>
(cherry picked from commit 73190dbc2f0da6601518aaf979440bbf2a4a281d)
(cherry picked from commit a7bb0ee27f816b9cfe72e17f027b81ef8fa3fd19)

--- a/xla/backends/gpu/codegen/emitters/transforms/BUILD
+++ b/xla/backends/gpu/codegen/emitters/transforms/BUILD
@@ -38,6 +38,11 @@ cc_library(
         "convert_float_nvidia.cc",
         "convert_index_type.cc",
         "lower_xla_shared.cc",
+        "convert_xla_gpu_pure_call_ops.cc",
+        "erase_dead_functions.cc",
+        "expand_float_ops.cc",
+        "flatten_tensors.cc",
+        "fuse_loops.cc",
         "optimize_loops.cc",
         "peel_loops.cc",
         "recover_exp2.cc",
