Added support for waves_per_eu function attribute. (#181)
(cherry picked from commit bc1d816061d568bbbb16526f7c76be133a86182f)

--- a/xla/service/gpu/BUILD
+++ b/xla/service/gpu/BUILD
@@ -615,6 +615,11 @@ cc_library(
     ],
 )
 
+tf_proto_library(
+    name = "triton_call_args_proto",
+    srcs = ["triton_call_args.proto"],
+)
+
 cc_library(
     name = "kernel_call",
     srcs = ["kernel_call.cc"],
@@ -655,11 +660,14 @@ cc_library(
     srcs = ["triton_call.cc"],
     hdrs = ["triton_call.h"],
     deps = [
+        ":triton_call_args_proto_cc",
         "@com_google_absl//absl/strings:string_view",
         "@llvm-project//mlir:AsmParser",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Parser",
         "@llvm-project//mlir:Support",
+        "@tsl//tsl/platform:logging",
+        "@tsl//tsl/platform:protobuf",
     ],
 )
 
