Make cupti test cuda only (#264)

--- a/xla/backends/profiler/gpu/BUILD
+++ b/xla/backends/profiler/gpu/BUILD
@@ -145,6 +145,7 @@ xla_test(
     tags = [
         "cuda-only",
         "no_mac",
+        "cuda-only"
     ],
     deps = [
         ":cuda_test",
