--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -56,8 +56,10 @@ cc_library(
         ":annotation",
         ":collective_broadcast_thunk",
         ":collective_thunk",
+        ":convolution_thunk",
         ":custom_call_thunk",
         ":dynamic_slice_thunk",
+        ":gpublas_lt_matmul_thunk",
         ":thunk",
         "//xla:debug_options_flags",
         "//xla:executable_run_options",
@@ -73,6 +75,7 @@ cc_library(
         "//xla/hlo/ir:hlo",
         "//xla/runtime:buffer_use",
         "//xla/runtime:execution_graph",
+        "//xla/runtime:object_pool",
         "//xla/runtime:resource_use",
         "//xla/service:buffer_assignment",
         "//xla/service:collective_ops_utils",
