--- a/xla/runtime/BUILD
+++ b/xla/runtime/BUILD
@@ -70,6 +70,8 @@ cc_library(
         ":resource_use",
         "//xla:util",
         "@com_google_absl//absl/algorithm:container",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:inlined_vector",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
@@ -90,6 +92,8 @@ xla_cc_test(
         "//xla/tsl/platform:statusor",
         "//xla/tsl/platform:test",
         "//xla/tsl/platform:test_main",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/types:span",
     ],
 )
@@ -97,4 +101,17 @@ xla_cc_test(
 cc_library(
     name = "thunk",
     hdrs = ["thunk.h"],
+    deps = [
+        "//xla/tsl/platform:statusor",
+        # "//xla/tsl/util:safe_reinterpret_cast",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/functional:any_invocable",
+        "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/status:statusor",
+    ],
+)
+
+cc_library(
+    name = "object_pool",
+    hdrs = ["object_pool.h"],
 )
