--- a/xla/runtime/BUILD
+++ b/xla/runtime/BUILD
@@ -51,7 +51,6 @@ cc_library(
     ],
 )
 
-<<<<<<< HEAD
 xla_cc_test(
     name = "resource_use_test",
     srcs = ["resource_use_test.cc"],
@@ -62,8 +61,6 @@ xla_cc_test(
     ],
 )
 
-=======
->>>>>>> 0d7041cd96 (command buffer stable version with subgraphs & hsaco cache update)
 cc_library(
     name = "execution_graph",
     srcs = ["execution_graph.cc"],
@@ -73,17 +70,13 @@ cc_library(
         ":resource_use",
         "//xla:util",
         "@com_google_absl//absl/algorithm:container",
-<<<<<<< HEAD
-=======
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
->>>>>>> 0d7041cd96 (command buffer stable version with subgraphs & hsaco cache update)
         "@com_google_absl//absl/container:inlined_vector",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings:str_format",
-<<<<<<< HEAD
         "@com_google_absl//absl/types:span",
     ],
 )
@@ -99,21 +92,15 @@ xla_cc_test(
         "//xla/tsl/platform:statusor",
         "//xla/tsl/platform:test",
         "//xla/tsl/platform:test_main",
-=======
         "@com_google_absl//absl/strings:string_view",
         "@com_google_absl//absl/synchronization",
->>>>>>> 0d7041cd96 (command buffer stable version with subgraphs & hsaco cache update)
         "@com_google_absl//absl/types:span",
     ],
 )
 
 cc_library(
-<<<<<<< HEAD
     name = "thunk",
     hdrs = ["thunk.h"],
-=======
-    name = "object_pool",
-    hdrs = ["object_pool.h"],
     deps = [
         "//xla/tsl/platform:statusor",
         # "//xla/tsl/util:safe_reinterpret_cast",
@@ -122,5 +109,9 @@ cc_library(
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status:statusor",
     ],
->>>>>>> 0d7041cd96 (command buffer stable version with subgraphs & hsaco cache update)
+)
+
+cc_library(
+    name = "object_pool",
+    hdrs = ["object_pool.h"],
 )
