--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -57,6 +57,8 @@ cc_library(
         ":collective_broadcast_thunk",
         ":collective_permute_thunk",
         ":collective_thunk",
+        ":convolution_thunk",
+        ":copy_thunk",
         ":custom_call_thunk",
         ":dynamic_slice_thunk",
         ":thunk",
