generate only amd test binary

--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2751,7 +2751,7 @@ xla_test(
         ],
     },
     backends = [
-        "gpu",
+       "gpu_amd_any",
     ],
     deps = [
         ":hlo_test_base",
