--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -1515,6 +1515,7 @@ xla_test(
     srcs = ["all_reduce_test.cc"],
     backend_tags = {
         "gpu": [
+            "multi_gpu",
             "multi_gpu_h100",
             "xla_amdgpu_any",
         ],
