--- a/.github/workflows/rocm-ci.yml
+++ b/.github/workflows/rocm-ci.yml
@@ -21,7 +21,7 @@ jobs:
     container:
       image: rocm/tensorflow-build:latest-jammy-python3.11-rocm6.3.0
       volumes:
-        - /tmp/xla_bazel_cache:/github/home/.cache/bazel_disk_cache
+        - /tmp/bazel_cache:/tf/disk_cache
       options:
         --device=/dev/kfd
         --device=/dev/dri
