Ci custom all reduce backporting v0.5.0 (#326)
* all_reduce_test.cc pass

* collective_ops_e2e_allreduce_test passed

* remove stream_id from GetNcclComm's input list

* added xla_gpu_backported_use_all_reduce_custom_kernel to debug options

* remove unused part

* adapt CommunicatorHandle to 0.6.0 branch

* generate only amd test binary

* use fine grained memory when memory space type is KCollective

* use a new memory type kP2PTempBuf

* added xla_gpu_backported_use_all_reduce_custom_kernel to debug_options_flags.cc

* cleanup - use TF_ASSIGN_OR_RETURN

--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2740,6 +2740,48 @@ xla_test(
     ],
 )
 
+
+xla_test(
+    name = "collective_ops_e2e_allreduce_test",
+    srcs = ["collective_ops_e2e_allreduce_test.cc"],
+    backend_tags = {
+        "gpu": [
+            "multi_gpu",
+            "no_oss",
+        ],
+    },
+    backends = [
+       "gpu_amd_any",
+    ],
+    deps = [
+        ":hlo_test_base",
+        ":literal_test_util",
+        ":test_macros_header",
+        ":test_utils",
+        ":xla_internal_test_main",
+        "//xla:array",
+        "//xla:error_spec",
+        "//xla:literal",
+        "//xla:literal_util",
+        "//xla:types",
+        "//xla/hlo/ir:hlo",
+        "//xla/hlo/utils:hlo_matchers",
+        "//xla/service:computation_placer_hdr",
+        "//xla/service:executable",
+        "//xla/service:hlo_module_config",
+        "//xla/service/gpu:backend_configs_cc",
+        "//xla/stream_executor:device_description",
+        "//xla/tsl/platform:statusor",
+        "//xla/tsl/platform:test",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/log",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+    ],
+)
+
+
 xla_test(
     name = "collective_pipeliner_execution_test",
     srcs = ["collective_pipeliner_execution_test.cc"],
