[ROCm] Disable Cudnn fusions (#358)

--- a/xla/service/gpu/transforms/BUILD
+++ b/xla/service/gpu/transforms/BUILD
@@ -688,6 +688,9 @@ cc_library(
 xla_test(
     name = "cudnn_fused_conv_rewriter_test",
     srcs = ["cudnn_fused_conv_rewriter_test.cc"],
+    tags = [
+        "cuda-only", # TODO(rocm): Until #12613 is fixed.
+    ],
     backend_tags = {
         "gpu_a100": [
             "noasan",
@@ -695,9 +698,8 @@ xla_test(
         ],
     },
     backends = [
-        "a100",
-        "amdgpu_any",
-    ] + if_oss(["nvgpu_any"]),
+        "gpu_a100",
+    ],
     shard_count = 10,
     deps = [
         ":conv_rewriter",
