Rocprofiler-sdk integration to v0.8.0
* rocprof-sdk addition,
upstream PR: openxla/xla/pull/29769

Squash following commits..
Update rocprofiler-sdk (v3) along with roctracer (v1) for rocm-jaxlib-v0.6.0 (#302)

* update for integration of rocprofiler-sdk (along with roctracer as a backup based on bazel_options from CLI)

(cherry picked from commit 7775dd04068567dc7e08215de23538da8d1d89f4)

use VLOG(2) to replace LOG(INFO), so PGLE has no verbose info (#357)

(cherry picked from commit 59501258e63f52c08ddeafbf69a0a5c658d9e08c)

update with kernel details for rocm-7.x (#364)

* update with kernel details for rocm-7.x

(cherry picked from commit 5597c0d87d63ca4fcc7e0325f23c4f504b35c982)

update to remove previously hard-coded rocprofiler-sdk path (#369)

* update to remove previously hard-coded rocprofiler-sdk path and add skip_rocprofiler_sdk to avoid loading `rocprofiler-sdk`

(cherry picked from commit ff74b5fda7dec651c9ed3d7a2bab4365ca25d61f)

* fixed buffer comparator test

---------

Co-authored-by: Chunyu Jin <chunyjin@amd.com>
(cherry picked from commit 492d1ee5534bcf72b6d172abfcfee0303414009b)

--- a/xla/service/gpu/transforms/BUILD
+++ b/xla/service/gpu/transforms/BUILD
@@ -6,7 +6,11 @@ load(
     "if_gpu_is_configured",
 )
 load("//xla/tests:build_defs.bzl", "xla_test")
-load("//xla/tsl:tsl.bzl", "if_google")
+load(
+    "//xla/tsl:tsl.bzl",
+    "if_google",
+    "if_oss",  # may be unused, that's fine
+)
 load(
     "//xla/tsl/platform:build_config_root.bzl",
     "tf_gpu_tests_tags",
