[ROCm] Restore CudnnFusedConvRewriter  (#372) (#392)
* [ROCm] Allways run GpuConvAlgorithmPicker

* [ROCm] Restore CudnnFusedConvRewriter

Introduce CudnnFusedConvDecomposer to revert back fused convs
if no fused algorithm could be found with ConvAlgorithmPicker.
Remove unfused fallback paths from RocmFusedConvRunner.

Co-authored-by: Dragan Mladjenovic <dragan.mladjenovic@amd.com>

--- a/xla/service/gpu/transforms/BUILD
+++ b/xla/service/gpu/transforms/BUILD
@@ -758,6 +758,42 @@ xla_test(
     ],
 )
 
+# Tested via :cudnn_fused_conv_rewriter_test
+cc_library(
+    name = "cudnn_fused_conv_decomposer",
+    srcs = ["cudnn_fused_conv_decomposer.cc"],
+    hdrs = ["cudnn_fused_conv_decomposer.h"],
+    deps = [
+        "//xla:comparison_util",
+        "//xla:debug_options_flags",
+        "//xla:literal",
+        "//xla:shape_util",
+        "//xla:util",
+        "//xla:xla_data_proto_cc",
+        "//xla:xla_proto_cc",
+        "//xla/hlo/ir:hlo",
+        "//xla/hlo/ir:hlo_instruction_utils",
+        "//xla/hlo/pass:hlo_pass",
+        "//xla/service:hlo_creation_utils",
+        "//xla/service:pattern_matcher",
+        "//xla/service/gpu:backend_configs_cc",
+        "//xla/service/gpu:cublas_cudnn",
+        "//xla/stream_executor:dnn",
+        "//xla/tsl/protobuf:dnn_proto_cc",
+        "@com_google_absl//absl/algorithm:container",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:inlined_vector",
+        "@com_google_absl//absl/log",
+        "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@tsl//tsl/platform:errors",
+        "@tsl//tsl/platform:ml_dtypes",
+        "@tsl//tsl/platform:statusor",
+    ],
+)
+
 # Tested via //third_party/tensorflow/compiler/xla/backends/gpu/codegen:cudnn_test
 cc_library(
     name = "cudnn_fusion_compiler",
