Use remote builders

--- a/build_tools/rocm/platform/linux_x64/BUILD
+++ b/build_tools/rocm/platform/linux_x64/BUILD
@@ -13,5 +13,20 @@ platform(
     exec_properties = {
         "container-image": "docker://rocm/tensorflow-build:latest-jammy-python3.10-rocm6.4.0@sha256:9c2fbc861570735fc86dbf39dd3cefef6a13fcf6ae08358271af52f1aebd4248",
         "OSFamily": "Linux",
+        "Pool": "linux_x64_large",
+    },
+)
+
+platform(
+    name = "linux_x64_gpu",
+    constraint_values = [
+        "@platforms//os:linux",
+        "@platforms//cpu:x86_64",
+        "@bazel_tools//tools/cpp:clang",
+    ],
+    exec_properties = {
+        "container-image": "docker://rocm/tensorflow-build:latest-jammy-python3.10-rocm6.4.0@sha256:9c2fbc861570735fc86dbf39dd3cefef6a13fcf6ae08358271af52f1aebd4248",
+        "OSFamily": "Linux",
+        "Pool": "amd_gpu",
     },
 )
