[ROCm] NaN checker
Very rough POC
Command buffers not supported
Enable via --xla_gpu_enable_nan_check

--- a/xla/service/gpu/BUILD
+++ b/xla/service/gpu/BUILD
@@ -360,6 +360,7 @@ cc_library(
         "//xla/backends/gpu/runtime:fft_thunk",
         "//xla/backends/gpu/runtime:gemm_thunk",
         "//xla/backends/gpu/runtime:gpublas_lt_matmul_thunk",
+        "//xla/backends/gpu/runtime:nan_check_thunk",
         "//xla/backends/gpu/runtime:host_send_recv_thunk",
         "//xla/backends/gpu/runtime:infeed_thunk",
         "//xla/backends/gpu/runtime:kernel_thunk",
@@ -2701,6 +2702,7 @@ tsl_gpu_library(
         "//xla:shape_util",
         "//xla:util",
         "//xla:xla_data_proto_cc",
+        "//xla/backends/gpu/runtime:nan_check",
         "//xla/service:collective_ops_utils",
         "//xla/service:custom_call_status",
         "//xla/service:custom_call_target_registry",
@@ -2710,6 +2712,8 @@ tsl_gpu_library(
         "//xla/stream_executor:platform_manager",
         "//xla/stream_executor:stream",
         "//xla/stream_executor:stream_finder",
+        "//xla/ffi",
+        "//xla/ffi:ffi_api",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
         "@com_google_absl//absl/status",
