--- a/xla/pjrt/distributed/BUILD
+++ b/xla/pjrt/distributed/BUILD
@@ -45,6 +45,10 @@ cc_library(
 xla_cc_test(
     name = "topology_util_test",
     srcs = ["topology_util_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":in_memory_key_value_store",
         ":protocol_proto_cc",
@@ -137,7 +141,10 @@ xla_cc_test(
     name = "client_server_test",
     size = "medium",
     srcs = ["client_server_test.cc"],
-    tags = if_oss(["not_run:arm"]),
+    tags = [
+        "exclusive",
+        "local",
+    ] + if_oss(["not_run:arm"]),
     deps = [
         ":client",
         ":distributed",
