--- a/xla/service/BUILD
+++ b/xla/service/BUILD
@@ -277,6 +277,10 @@ cc_library(
 xla_cc_test(
     name = "collective_permute_cycle_test",
     srcs = ["collective_permute_cycle_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":collective_permute_cycle",
         ":source_target_pairs",
@@ -465,6 +469,10 @@ cc_library(
 xla_cc_test(
     name = "collective_pipeliner_test",
     srcs = ["collective_pipeliner_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":collective_pipeliner",
         ":collective_pipeliner_utils",
@@ -668,6 +676,10 @@ xla_cc_test(
     srcs = [
         "sharding_propagation_test.cc",
     ],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":sharding_propagation",
         "//xla:shape_util",
@@ -716,6 +728,10 @@ xla_cc_test(
     size = "small",
     srcs = [
         "sharding_remover_test.cc",
+    ],
+    tags = [
+        "exclusive",
+        "local",
     ],
     deps = [
         ":sharding_remover",
@@ -1305,6 +1321,10 @@ cc_library(
 xla_cc_test(
     name = "p2p_schedule_preparation_test",
     srcs = ["p2p_schedule_preparation_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":p2p_schedule_preparation",
         "//xla:util",
@@ -2434,6 +2454,10 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_combiner_test",
     srcs = ["reduce_scatter_combiner_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":reduce_scatter_combiner",
         "//xla/hlo/ir:hlo",
@@ -2472,6 +2496,10 @@ cc_library(
 xla_cc_test(
     name = "all_reduce_simplifier_test",
     srcs = ["all_reduce_simplifier_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":all_reduce_simplifier",
         ":hlo_module_config",
@@ -2509,6 +2537,10 @@ cc_library(
 xla_cc_test(
     name = "all_gather_simplifier_test",
     srcs = ["all_gather_simplifier_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":all_gather_simplifier",
         ":pattern_matcher",
@@ -2542,6 +2574,10 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_decomposer_test",
     srcs = ["reduce_scatter_decomposer_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":collective_ops_utils",
         ":reduce_scatter_decomposer",
@@ -2575,6 +2611,10 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_reassociate_test",
     srcs = ["reduce_scatter_reassociate_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":hlo_verifier",
         ":reduce_scatter_reassociate",
@@ -5282,6 +5322,10 @@ cc_library(
 xla_cc_test(
     name = "collective_ops_utils_test",
     srcs = ["collective_ops_utils_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":collective_ops_utils",
         ":collective_permute_cycle",
@@ -5614,6 +5658,10 @@ cc_library(
 xla_cc_test(
     name = "scatter_simplifier_test",
     srcs = ["scatter_simplifier_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":scatter_simplifier",
         "//xla:literal",
@@ -5737,6 +5785,10 @@ cc_library(
 xla_cc_test(
     name = "batched_gather_scatter_normalizer_test",
     srcs = ["batched_gather_scatter_normalizer_test.cc"],
+    tags = [
+        "exclusive",
+        "local",
+    ],
     deps = [
         ":batched_gather_scatter_normalizer",
         "//xla/hlo/testlib:hlo_hardware_independent_test_base",
